Avoid screen overflow

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -45,7 +45,7 @@
 }
 
 html {
-  width: fit-content;
+  width: 100%;
 }
 
 ::selection {
